--- a/README
+++ b/README
@@ -5,13 +5,19 @@ IMPORTANT: if you intend to just USE the library
            TO READ ONLY THE API DOCUMENTATION.
            There is a link to it directly from the
            documentation home page. If you don't find
-           it, go to the file srAPI.h for a description.
+           it, go to the file srAPI.h and syslogmessage.h
+           for a description.
 
 File testdrvr.c is a working sample program. You must edit
 it because it contains a hardcoded IP address.
 
+File testsrvr.c is a working sample server program. It is used to
+demo the API - please don't expect it to be a full syslogd ;)
+All it does is dump the message plus a few properties out to
+stdout.
+
 Thanks to Devin Kowatch, the library now compiles not
-only under Win32, but also Linux, Solaris and AIX. I will 
+only under Win32, but also Linux, Solaris, FreeBSD and AIX. I will 
 move some more details on setting those things up.
 
 There are two ways to build liblogging under linux/solaris.  
@@ -28,9 +34,8 @@ Method 2:
     
 For AIX and FreeBSD, use the linux platform.
 
-The directory structure will change in further
-versions, but I am currently too busy implementing
-new code to do this.
+Many thanks to Albert Mietus for providing comments as well as some
+syslog-sign code that I can use to pull ideas from.
 
 Updates are always posted at the project web
 site at
