update ChangeLog, convert CRLF --> LF

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@ v1.0.1 2014-01-21
   * liblogging-stdlog
   * liblogging-rfc3195
   made some necessary name adjustments
+  See also: https://github.com/rsyslog/liblogging/issues/2
 ----------------------------------------------------------------------------
 v1.0.0 2014-01-21
 - made rfc3195 library (the original liblogging) an optional component
