--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@ v1.0.3 2014-03-??
 - fix build problem in Ubuntu 10.04
   Thanks to Assaf Gordon for reporting
   See: https://github.com/rsyslog/liblogging/issues/11
+- do not override user varibale CFLAGS
+  Thanks to Thomas D. for reporting this problem and suggesting a solution.
+  closes: https://github.com/rsyslog/liblogging/issues/15
 ----------------------------------------------------------------------------
 v1.0.2 2014-03-03
 - first version of the "real" API of liblogging-stdlog
