--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 ----------------------------------------------------------------------------
+v1.0.5 2014-12-09
+- cleanup for systemd-journal >= 209
+  closes https://github.com/rsyslog/liblogging/issues/17
+- bugfix: date stamp was incorrectly formatted
+  The day part was totally off. This affected the "uxsock:" and "file:"
+  drivers.
+  closes https://github.com/rsyslog/liblogging/issues/21
+----------------------------------------------------------------------------
 v1.0.4 2014-04-03
 - fix build problems on some platforms (namely RHEL/CENTOS 5)
 - add --disable-man pages ./configure option
