--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ----------------------------------------------------------------------------
 v1.0.6 2015-??-??
+- fix BSD build
 - enhancement:  sigsafe_printf now recognizes the "j" length modifier
   Thanks to David A. Bright for implementing this
 - bugfix: potentialSEGV in the stdlog_sigsafe_string formatter
