fix build on Solaris

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 ----------------------------------------------------------------------------
 v1.0.7 2017-??-??
+- builds again on Solaris
 ----------------------------------------------------------------------------
 v1.0.6 2017-03-06
 - fix small memory leaks in libstdlog
